--- a/TT/templates/pages/home.html
+++ b/TT/templates/pages/home.html
@@ -111,7 +111,7 @@
                 </div>
                 <div class="center aligned four wide column">
                     <div class="ui small image">
-                        <img class="bw-image" id='django-icon' src="{% static 'icons/django.png' %}">
+                        <img class="bw-image" id='django-icon' src="{% static 'icons/django-logo-negative.png' %}">
                     </div>
                 </div>
                 <div class="center aligned four wide column">
