--- a/TT/templates/base.html
+++ b/TT/templates/base.html
@@ -1,7 +1,7 @@
 {% load static %}
 <html>
     <head>
-        {% if not DEBUG %}
+        {% if not debug %}
             {% load google_analytics_tags %}
             <div style="display:none">
                 <img src="{% google_analytics %}" width="0" height="0" />
@@ -393,6 +393,7 @@
                 --TT-brown: rgb(97, 67, 14);
                 --TT-cream: rgba(229, 218, 218, 1);
                 --TT-beige: rgba(188, 171, 174, 1);
+                --TT-light-gray: rgba(230, 230, 230, 1);
             }
 
 
@@ -401,6 +402,7 @@
                 font-weight: light;
                 position: relative;
                 height: auto;
+                width: 100%;
             }
 
 
@@ -490,13 +492,12 @@
                 bottom: 0;
                 left: 0;
                 right: 0;
-                background: var(--TT-black);
-                color: white;
+                background: var(--TT-light-gray);
+                color: var(--TT-black);
                 height: 100px;
             }
 
             .footer-spacer {
-                background: none;
                 height: 100px;
             }
 
