Created temp solution for article abstracts/descriptions on detail view. Right now they're completely omitted, so that the text at the beginning of the markdown can be copied into the article object's abstract, and it doesn't get rendered twice on the same page. This way, I have the description in Git, nicely paired with each article.

--- a/TT/templates/articles/detail.html
+++ b/TT/templates/articles/detail.html
@@ -28,9 +28,9 @@
                 {{ object.title }}
             </h1>
             <div class="ui content">
-                <p class="description">
-                    {{ object.abstract }}
-                </p>
+{#                <p class="description">#}
+{#                    {{ object.abstract }}#}
+{#                </p>#}
                 <div class="extra">
                     {{ object.publish_date }}
                 </div>
